# llm-inference-engine

./: .gitignore  CMakeLists.txt  README.md  interence_overall.txt  project_structure.txt  user_entry.cpp
examples/cpp/: CMakeLists.txt  context_attention_example.cpp  context_decoder_example.cpp  ffn_example.cpp  self_attention_example.cpp  self_decoder_example.cpp
huggingface_llama/: run.py
huggingface_llama/launch/: app.py  model.py
huggingface_llama/quantization/: quantization_4bit.py
huggingface_llama/weight_convertion/: convert_llama_weights_to_hf.py
huggingface_llama_code/: modeling_llama.py  run.py
huggingface_llama_code/weight_convertion/: weights_convert.py
lab/: main  main.cpp  main1  prompts.txt
lab/cmake/build_static_lib/: CMakeLists.txt  main.cpp
lab/cmake/build_static_lib/includes/: head.h
lab/cmake/build_static_lib/src/: add.cpp  div.cpp  mul.cpp  sub.cpp
lab/cmake/example01/: CMakeLists.txt  add.cpp  div.cpp  mul.cpp  sub.cpp
lab/const/: const_rand.cpp
lab/cpp_lab/pointer/: nullptr.cpp
lab/cpp_lab/static/: static_address.cpp
lab/cuda/: datatype.cu
lab/shared_memory/: v1.cu
lab/smart_pointer/: 01.cpp  02.cpp  03.cpp  04  04.cpp  prog
lab/static/: class_static.cpp  v2
lab/temp/: macro.h  main  main.cpp  main.h  output.txt
src/: CMakeLists.txt
src/kernels/: CMakeLists.txt  add_residual.cu  add_residual_and_rmsnorm.cu  attn_softmax.cu  build_casual_mask.cu  build_casual_mask.h  build_causal_mask.cu  cal_padding_offset.cu  cal_paddingoffset.cu  cal_paddingoffset.h  concat_kv.cu  concat_past_kv.cu  cublas_utils.cc  cublas_utils.cpp  decoder_self_attention.cu  fused_add_residual_and_rmsnorm.cu  fused_decoder_and_self_attn.cu  fused_decoder_self_attention.cu  fused_rsd_and_norm.cu  fused_scale_mask_and_softmax.cu  fused_trans_and_rmv_pad.cu  fused_transpose_and_remove_padding.cu  input_embedding.cu  input_embedding.h  linear.cu  linear.h  qkv_bias_and_RoPE.cu  qkv_bias_and_rope.cu  qkv_bias_and_rope.h  repeat_kv.cu  rmsnorm.cu  rmsnorm.h  rmsnorm_kernel.cu  rmsnorm_kernel.h  rope.cu  sampling.cu  scale_and_mask_and_softmax.cu  silu_and_mul.cu  topk.cu  transpose_and_remove_padding.cu
src/kernels/includes/: add_residual.h  add_residual_and_rmsnorm.cuh  add_residual_and_rmsnorm.h  attn_softmax.h  build_causal_mask.h  cal_padding_offset.cuh  cal_padding_offset.h  concat_kv.h  concat_past_kv.h  cublas_utils.cuh  cublas_utils.h  decoder_self_attention.h  fused_add_residual_and_rmsnorm.h  fused_decoder_and_self_attn.h  fused_decoder_self_attention.h  fused_rsd_and_norm.h  fused_scale_mask_and_softmax.h  fused_trans_and_rmv_pad.h  fused_transpose_and_remove_padding.h  input_embedding.h  linear.cuh  linear.h  qkv_bias_and_rope.cuh  qkv_bias_and_rope.h  repeat_kv.cuh  repeat_kv.h  rmsnorm.h  rope.cuh  rope_utils.cuh  sampling.cuh  sampling.h  scale_and_mask_and_softmax.cuh  silu_and_mul.h  topk.cuh  topk.h  transpose_and_remove_padding.cuh  transpose_and_remove_padding.h
src/layers/: CMakeLists.txt  context_attention.cpp  context_decoder.cpp  ffn.cpp  masked_self_attention.cpp  self_attention.cpp  self_decoder.cpp
src/layers/attention/: context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/layers/includes/: context_attention.h  context_decoder.h  ffn.h  masked_self_attention.h  self_attention.h  self_decoder.h
src/memory/: memory_allocator.md  memory_deleter.cuh
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/models/: basemodel.h  tokenizer.h
src/models/llama/: llama.cpp  llama.h  llama_config.json  llama_params.h
src/utils/: CMakeLists.txt  cuda_debug_utils.cuh  debug_utils.h  macro.h  model_utils.h  output_utils.h  params.h  string_utils.h  tensor.h  vectorize_utils.h  weight_utils.cu  weight_utils.h
src/weights/: CMakeLists.txt  base_weights.h  layer_weights.cpp  llama_weights.cpp  weight.h
src/weights/includes/: attention_weights.h  base_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.h  llama_weights.h  norm_weights.h  weight.h
src/weights/llama/: attention_weights.h  embedding_weights.h  ffn_weights.h  layer_weights.cpp  layer_weights.h  llama_weights.cpp  llama_weights.h  norm_weights.h
temp/: main.cpp  main.cu  test_fp16.cu  vec_add.h
temp/huggingface_llama/: run.py
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_add_residual.cu  test_add_residual_and_rmsnorm.cu  test_bias_and_RoPE.cu  test_bias_and_rope.cu  test_build_casual_mask.cu  test_build_causal_mask.cu  test_cal_padding_offset.cu  test_cal_paddingoffset.cu  test_casual_mask.cu  test_concat_kv.cu  test_concat_past_kv.cu  test_decoder_self_attention.cu  test_fused_add_residual_and_rmsnorm.cu  test_fused_decoder_and_self_attn.cu  test_fused_decoder_self_attention.cu  test_fused_rsd_and_norm.cu  test_fused_scale_mask_and_softmax.cu  test_fused_trans_and_rmv_pad.cu  test_fused_transpose_and_remove_padding.cu  test_input_embedding.cu  test_linear.cu  test_mask_softmax.cu  test_qkv_bias_and_rope.cu  test_repeat_kv.cu  test_rmsnorm.cu  test_sampling.cu  test_scale_and_mask_and_softmax.cu  test_silu_and_mul.cu  test_topk.cu  test_transpose_and_remove_padding.cu
