cmake_minimum_required(VERSION 3.10)

add_executable(context_attention_example context_attention_example.cpp)
set_property(TARGET context_attention_example PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET context_attention_example PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(context_attention_example PUBLIC -lcudart -lcudadevrt llama_context_attention)

add_executable(self_attention_example self_attention_example.cpp)
set_property(TARGET self_attention_example PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET self_attention_example PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(self_attention_example PUBLIC -lcudart -lcudadevrt llama_self_attention)

add_executable(ffn_example ffn_example.cpp)
set_property(TARGET ffn_example PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET ffn_example PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(ffn_example PUBLIC -lcudart -lcudadevrt llama_ffn)

add_executable(context_decoder_example context_decoder_example.cpp)
set_property(TARGET context_decoder_example PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET context_decoder_example PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(context_decoder_example PUBLIC -lcudart -lcudadevrt llama_context_decoder)

add_executable(self_decoder_example self_decoder_example.cpp)
set_property(TARGET self_decoder_example PROPERTY POSITION_INDEPENDENT_CODE  ON)
set_property(TARGET self_decoder_example PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
target_link_libraries(self_decoder_example PUBLIC -lcudart -lcudadevrt llama_self_decoder)